# RekaSolana

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
apps/web/: .env.example  index.html  package.json  tsconfig.app.json
apps/web/src/: App.css  App.tsx  index.css  main.tsx  polyfills.ts
apps/web/src/components/landing/: LandingPage.tsx  landing.css
apps/web/src/idl/: reka.json
apps/web/src/lib/: rekaProgram.ts
contracts/reka/: Anchor.toml
contracts/reka/programs/reka/: Cargo.toml
contracts/reka/programs/reka/src/: lib.rs
programs/reka/: Cargo.toml
programs/reka/src/: lib.rs
scripts/: check-program.mjs
src/: App.css  App.tsx
