[package]
name = "reka"
version = "0.1.0"
description = "Solana asset passport program for second-hand devices"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reka"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
